--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "aphrodite": "^1.2.1",
+    "axios": "^0.16.2",
     "chart.js": "^2.6.0",
     "color": "^1.0.3",
     "es6-promise": "^4.1.0",
@@ -41,6 +42,7 @@
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
-    "redux-persist": "^4.8.0"
+    "redux-persist": "^4.8.0",
+    "whatwg-fetch": "^2.0.3"
   }
 }
